[FIX] mail: call view external margin slightly reduced
Follow-up of https://github.com/odoo/odoo/pull/206260

PR above improve style of call view with some spacing around
it which looks better. However, the spacing was too big even
though it uses the minimum `.mx-1.mt-1` of 4px.

The 4px spacing is in many cases the minimum desired to see
spacing between 2 elements, but here the intent is to give
a container a slight visual floating effect. The 4px is
appropriate to show item next to each other but 2px is best
to simulate floating effect.

This commit improves by reducing the spacing by half their
value.

closes odoo/odoo#206731

--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -64,9 +64,18 @@ $o-discuss-talkingColor: lighten($success, 10%);
     gap: map-get($spacers, 1) / 2;
 }
 
+.o-mx-0_5 {
+    margin-left: map-get($spacers, 1) / 2;
+    margin-right: map-get($spacers, 1) / 2;
+}
+
 .o-my-0_5 {
     margin-top: map-get($spacers, 1) / 2;
     margin-bottom: map-get($spacers, 1) / 2;
+}
+
+.o-mt-0_5 {
+    margin-top: map-get($spacers, 1) / 2;
 }
 
 .o-py-0_5 {
